tests/errors/switch_duplicate_case.ki
switch 1:
    case 3 + 4:
        discard 0
    case 7:
        discard 0
